src/objects/Web_Call_Setting__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>arsuf__AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Callout_Response_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This identifies if for a callout we are logging the call out response time.</description>
        <label>Log Callout Response Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAuthVersion__c</fullName>
        <label>OAuthVersion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propogate_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will signify if the exception should be returned from the callout class or handled locally</description>
        <label>Propogate Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Template__c</fullName>
        <label>Request Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_Org__c</fullName>
        <description>Technical field to be used exclusively in data management automation jobs</description>
        <label>Target Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Target_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TempId__c</fullName>
        <externalId>true</externalId>
        <label>TempId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Web Call Setting</label>
    <nameField>
        <label>Web Call Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Call Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>